# eulumdat-plot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tree.py
data/input/: sample_01_isym3.ldt  sample_03_isym2.ldt  sample_05_isym1.ldt  sample_06_isym1.ldt  sample_07_isym4.ldt  sample_08_isym4.ldt  sample_09_isym4.ldt  sample_10_isym4.ldt  sample_11_isym2.ldt  sample_12_isym2.ldt  sample_14_isym1.ldt  sample_15_isym4.ldt  sample_17_isym4.ldt  sample_19_isym4.ldt  sample_20_isym2.ldt  sample_21_isym1.ldt  sample_22_isym3.ldt  sample_23_isym3.ldt  sample_25_isym3.ldt  sample_29_isym4.ldt  sample_30_isym4.ldt  sample_33_isym3.ldt  sample_34_isym3.ldt  sample_35_isym1.ldt  sample_36_isym4.ldt  sample_37_isym2.ldt  sample_38_isym2.ldt  sample_41_isym2.ldt  sample_42_isym1.ldt  sample_43_isym4.ldt  sample_44_isym4.ldt  sample_45_isym4.ldt  sample_46_isym4.ldt
examples/: 01_basic_usage.md  02_resize_and_export.md
src/eulumdat_plot/: __init__.py  export.py  plot.py  renderer.py
tests/: test_scaling.py  test_smoke.py
