[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eulumdat-plot"
version = "0.0.1"
description = "Photometric curve plotting for EULUMDAT (.ldt) files — extension to eulumdat-py"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "123VincentB" }]
requires-python = ">=3.9"
dependencies = [
    "eulumdat-py>=1.0.0",
]
keywords = ["eulumdat", "ldt", "photometry", "lighting", "polar", "plot", "svg"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/123VincentB/eulumdat-plot"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]